@@ -4,6 +4,7 @@ import com.girigiri.kwrental.auth.domain.Member;
 import com.girigiri.kwrental.auth.repository.MemberRepository;
 import com.girigiri.kwrental.equipment.domain.Equipment;
 import com.girigiri.kwrental.equipment.repository.EquipmentRepository;
+import com.girigiri.kwrental.inventory.domain.RentalDateTime;
 import com.girigiri.kwrental.inventory.domain.RentalPeriod;
 import com.girigiri.kwrental.item.domain.Item;
 import com.girigiri.kwrental.item.repository.ItemRepository;
@@ -13,8 +14,12 @@ import com.girigiri.kwrental.rental.dto.request.CreateRentalRequest;
 import com.girigiri.kwrental.rental.dto.request.RentalSpecsRequest;
 import com.girigiri.kwrental.rental.dto.request.ReturnRentalRequest;
 import com.girigiri.kwrental.rental.dto.request.ReturnRentalSpecRequest;
+import com.girigiri.kwrental.rental.dto.response.RentalSpecByItemResponse;
+import com.girigiri.kwrental.rental.dto.response.RentalSpecsByItemResponse;
 import com.girigiri.kwrental.rental.dto.response.RentalsDto;
 import com.girigiri.kwrental.rental.dto.response.ReservationsWithRentalSpecsByEndDateResponse;
+import com.girigiri.kwrental.rental.dto.response.overduereservations.OverdueReservationResponse;
+import com.girigiri.kwrental.rental.dto.response.reservationsWithRentalSpecs.ReservationWithRentalSpecsResponse;
 import com.girigiri.kwrental.rental.dto.response.reservationsWithRentalSpecs.ReservationsWithRentalSpecsAndMemberNumberResponse;
 import com.girigiri.kwrental.rental.repository.RentalSpecRepository;
 import com.girigiri.kwrental.rental.repository.dto.RentalDto;
@@ -22,6 +27,7 @@ import com.girigiri.kwrental.rental.repository.dto.RentalSpecDto;
 import com.girigiri.kwrental.reservation.domain.Reservation;
 import com.girigiri.kwrental.reservation.domain.ReservationSpec;
 import com.girigiri.kwrental.reservation.repository.ReservationRepository;
+import com.girigiri.kwrental.reservation.repository.dto.ReservationWithMemberNumber;
 import com.girigiri.kwrental.testsupport.fixture.*;
 import io.restassured.RestAssured;
 import io.restassured.http.ContentType;
@@ -32,12 +38,13 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 
 import java.time.LocalDate;
-import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Set;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.hamcrest.Matchers.containsString;
+import static org.junit.jupiter.api.Assertions.assertAll;
 import static org.springframework.restdocs.restassured.RestAssuredRestDocumentation.document;
 
 class RentalAcceptanceTest extends AcceptanceTest {
@@ -95,7 +102,7 @@ class RentalAcceptanceTest extends AcceptanceTest {
 
         final ReservationSpec reservationSpec1 = ReservationSpecFixture.builder(equipment1).period(new RentalPeriod(LocalDate.now(), LocalDate.now().plusDays(1))).build();
         final ReservationSpec reservationSpec2 = ReservationSpecFixture.builder(equipment2).period(new RentalPeriod(LocalDate.now(), LocalDate.now().plusDays(1))).build();
-        final LocalDateTime acceptDateTime = LocalDateTime.now();
+        final RentalDateTime acceptDateTime = RentalDateTime.now();
         final Reservation reservation1 = reservationRepository.save(ReservationFixture.builder(List.of(reservationSpec1, reservationSpec2)).memberId(member.getId()).acceptDateTime(acceptDateTime).build());
         final RentalSpec rentalSpec1 = RentalSpecFixture.builder().propertyNumber("11111111").reservationSpecId(reservationSpec1.getId()).build();
         final RentalSpec rentalSpec2 = RentalSpecFixture.builder().propertyNumber("33333333").reservationSpecId(reservationSpec2.getId()).build();
@@ -117,10 +124,10 @@ class RentalAcceptanceTest extends AcceptanceTest {
                 .then().log().all().statusCode(HttpStatus.OK.value())
                 .extract().as(ReservationsWithRentalSpecsAndMemberNumberResponse.class);
 
-        // then todo: 로컬에서는 통과하는 테스트가 CI에서 작동하지 않는다. 이 문제를 해결해야 함.
-//        assertThat(response.getReservations()).usingRecursiveFieldByFieldElementComparator()
-//                .containsExactlyInAnyOrder(ReservationWithRentalSpecsResponse.of(reservation1, List.of(rentalSpec1, rentalSpec2)),
-//                        ReservationWithRentalSpecsResponse.of(reservation2, Collections.emptyList()));
+        // then
+        assertThat(response.getReservations()).usingRecursiveFieldByFieldElementComparator()
+                .containsExactlyInAnyOrder(ReservationWithRentalSpecsResponse.of(new ReservationWithMemberNumber(reservation1, member.getMemberNumber()), List.of(rentalSpec1, rentalSpec2)),
+                        ReservationWithRentalSpecsResponse.of(new ReservationWithMemberNumber(reservation2, member.getMemberNumber()), Collections.emptyList()));
     }
 
     @Test
@@ -131,7 +138,7 @@ class RentalAcceptanceTest extends AcceptanceTest {
         final Equipment equipment2 = equipmentRepository.save(EquipmentFixture.builder().modelName("test2").build());
         final Member member = memberRepository.save(MemberFixture.create());
 
-        final LocalDateTime acceptDateTime = LocalDateTime.now();
+        final RentalDateTime acceptDateTime = RentalDateTime.now();
         final LocalDate now = LocalDate.now();
         final LocalDate yesterday = now.minusDays(1);
 
@@ -146,7 +153,7 @@ class RentalAcceptanceTest extends AcceptanceTest {
         final ReservationSpec reservationSpec4 = ReservationSpecFixture.builder(equipment2).period(new RentalPeriod(yesterday.minusDays(1), yesterday)).build();
         final Reservation reservation2 = reservationRepository.save(ReservationFixture.builder(List.of(reservationSpec3, reservationSpec4)).memberId(member.getId()).acceptDateTime(acceptDateTime).build());
         final RentalSpec rentalSpec3 = RentalSpecFixture.builder().propertyNumber("33333333").reservationSpecId(reservationSpec3.getId()).build();
-        final RentalSpec rentalSpec4 = RentalSpecFixture.builder().propertyNumber("44444444").reservationSpecId(reservationSpec4.getId()).returnDateTime(LocalDateTime.now()).build();
+        final RentalSpec rentalSpec4 = RentalSpecFixture.builder().propertyNumber("44444444").reservationSpecId(reservationSpec4.getId()).returnDateTime(RentalDateTime.now()).build();
         rentalSpecRepository.saveAll(List.of(rentalSpec3, rentalSpec4));
 
         // when
@@ -156,13 +163,13 @@ class RentalAcceptanceTest extends AcceptanceTest {
                 .then().log().all().statusCode(HttpStatus.OK.value())
                 .extract().as(ReservationsWithRentalSpecsByEndDateResponse.class);
 
-        // then todo: 로컬에서는 통과하는 테스트가 CI에서 작동하지 않는다. 이 문제를 해결해야 함.
-//        assertAll(
-//                () -> assertThat(response.getOverdueReservations().getReservations()).usingRecursiveFieldByFieldElementComparator()
-//                        .containsExactlyInAnyOrder(OverdueReservationResponse.of(reservation2, List.of(rentalSpec3))),
-//                () -> assertThat(response.getReservationsByEndDate().getReservations()).usingRecursiveFieldByFieldElementComparator()
-//                        .containsExactlyInAnyOrder(ReservationWithRentalSpecsResponse.of(reservation1, List.of(rentalSpec1, rentalSpec2)))
-//        );
+        // then
+        assertAll(
+                () -> assertThat(response.getOverdueReservations().getReservations()).usingRecursiveFieldByFieldElementComparator()
+                        .containsExactlyInAnyOrder(OverdueReservationResponse.of(new ReservationWithMemberNumber(reservation2, member.getMemberNumber()), List.of(rentalSpec3))),
+                () -> assertThat(response.getReservationsByEndDate().getReservations()).usingRecursiveFieldByFieldElementComparator()
+                        .containsExactlyInAnyOrder(ReservationWithRentalSpecsResponse.of(new ReservationWithMemberNumber(reservation1, member.getMemberNumber()), List.of(rentalSpec1, rentalSpec2)))
+        );
     }
 
     @Test
@@ -172,7 +179,7 @@ class RentalAcceptanceTest extends AcceptanceTest {
         final Equipment equipment1 = equipmentRepository.save(EquipmentFixture.builder().modelName("test1").build());
         final Equipment equipment2 = equipmentRepository.save(EquipmentFixture.builder().modelName("test2").build());
 
-        final LocalDateTime acceptDateTime = LocalDateTime.now();
+        final RentalDateTime acceptDateTime = RentalDateTime.now();
         final LocalDate now = LocalDate.now();
         final LocalDate yesterday = now.minusDays(1);
 
@@ -216,7 +223,6 @@ class RentalAcceptanceTest extends AcceptanceTest {
         final Equipment equipment1 = equipmentRepository.save(EquipmentFixture.builder().modelName("test1").build());
         final Equipment equipment2 = equipmentRepository.save(EquipmentFixture.builder().modelName("test2").build());
 
-        final LocalDateTime acceptDateTime = LocalDateTime.now();
         final LocalDate now = LocalDate.now();
         final LocalDate yesterday = now.minusDays(1);
 
@@ -239,6 +245,38 @@ class RentalAcceptanceTest extends AcceptanceTest {
         assertThat(response.getRentals()).usingRecursiveFieldByFieldElementComparator()
                 .containsExactly(new RentalDto(reservation.getStartDate(), reservation.getEndDate(),
                         Set.of(new RentalSpecDto(equipment1.getModelName(), rentalSpec1.getStatus()), new RentalSpecDto(equipment2.getModelName(), rentalSpec2.getStatus())))
+                );
+    }
+
+    @Test
+    @DisplayName("특정 자산번호의 반납된 사용이력을 조회한다.")
+    void getReturnsByPropertyNumber() {
+        // given
+        final Equipment equipment = equipmentRepository.save(EquipmentFixture.create());
+
+        final ReservationSpec reservationSpec1 = ReservationSpecFixture.create(equipment);
+        final Reservation reservation1 = reservationRepository.save(ReservationFixture.builder(List.of(reservationSpec1)).terminated(true).build());
+        final RentalDateTime now = RentalDateTime.now();
+        final RentalSpec rentalSpec1 = RentalSpecFixture.builder().reservationId(reservation1.getId()).propertyNumber("11111111").acceptDateTime(now).returnDateTime(now.calculateDay(1)).status(RentalSpecStatus.RETURNED).build();
+
+        final ReservationSpec reservationSpec2 = ReservationSpecFixture.create(equipment);
+        final Reservation reservation2 = reservationRepository.save(ReservationFixture.builder(List.of(reservationSpec2)).terminated(true).build());
+        final RentalSpec rentalSpec2 = RentalSpecFixture.builder().reservationId(reservation1.getId()).propertyNumber("11111111").acceptDateTime(now.calculateDay(2)).returnDateTime(now.calculateDay(3)).status(RentalSpecStatus.LOST).build();
+
+        rentalSpecRepository.saveAll(List.of(rentalSpec1, rentalSpec2));
+
+        // when
+        final RentalSpecsByItemResponse response = RestAssured.given(requestSpec)
+                .filter(document("admin_getReturnedRentalSpecsByPropertyNumber"))
+                .when().log().all().get("/api/admin/rentals/returns?propertyNumber={propertyNumber}", rentalSpec1.getPropertyNumber())
+                .then().log().all().statusCode(HttpStatus.OK.value())
+                .extract().as(RentalSpecsByItemResponse.class);
+
+        // then
+        assertThat(response.getRentalSpecs()).usingRecursiveFieldByFieldElementComparator()
+                .containsExactly(
+                        new RentalSpecByItemResponse("불량 반납", rentalSpec2.getAcceptDateTime().toLocalDate(), rentalSpec2.getReturnDateTime().toLocalDate(), reservation2.getName(), rentalSpec2.getStatus().name())
+                        , new RentalSpecByItemResponse("정상 반납", rentalSpec1.getAcceptDateTime().toLocalDate(), rentalSpec1.getReturnDateTime().toLocalDate(), reservation1.getName(), rentalSpec1.getStatus().name())
                 );
     }
 }
